# AcademicOs

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: resources.qrc  style.qss  todo.qss
src/: main.cpp
src/core/: MetricManager.cpp  MetricManager.h  StorageManager.cpp  StorageManager.h
src/core/analytics/: AnalyticsService.cpp  AnalyticsService.h
src/core/todo/: Task.h  ToDoModule.cpp  ToDoModule.h
src/modules/: Module.h
src/modules/analytics/: AnalyticsFullPage.cpp  AnalyticsFullPage.h  AnalyticsHeader.cpp  AnalyticsHeader.h  AnalyticsModule.cpp  AnalyticsModule.h  AnalyticsPage.cpp  AnalyticsPage.h  AnalyticsSmallWidget.cpp  AnalyticsSmallWidget.h  ChartPanel.cpp  ChartPanel.h  MetricsPanel.cpp  MetricsPanel.h
src/modules/analytics/core/: AnalyticsService.cpp  AnalyticsService.h
src/modules/analytics/ui/: AnalyticsHeader.cpp  AnalyticsHeader.h  AnalyticsPage.cpp  ChartPanel.cpp  ChartPanel.h  MetricsPanel.cpp  MetricsPanel.h
src/modules/calendar/ui/: CalendarPage.cpp
src/modules/dashboard/: DailyPage.cpp  Dashboard.cpp  Dashboard.h
src/modules/finance/: FinanceFullPage.cpp  FinanceFullPage.h  FinanceModule.cpp  FinanceModule.h  FinanceSidebar.cpp  FinanceSidebar.h  FinanceSmallWidget.cpp  FinanceSmallWidget.h  FinanceWorkspace.cpp
src/modules/finance/core/: FinanceModule.cpp  FinanceModule.h
src/modules/finance/ui/: FinanceFullPage.cpp  FinanceFullPage.h  FinanceSidebar.cpp  FinanceSidebar.h  FinanceWorkspace.cpp  FinanceWorkspace.h
src/modules/finance/widgets/: FinanceSmallWidget.cpp  FinanceSmallWidget.h
src/modules/todo/core/: ToDoModule.cpp  ToDoModule.h
src/modules/todo/ui/: ToDoListWidget.cpp  ToDoListWidget.h  ToDoPage.cpp  ToDoPage.h  ToDoRightBar.cpp  ToDoRightBar.h
src/modules/todo/widgets/: TaskItemWidget.cpp  TaskItemWidget.h  ToDoSmallWidget.cpp  ToDoSmallWidget.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/components/: Sidebar.cpp  Sidebar.h  SidebarItem.cpp  WelcomeWidget.cpp
src/ui/components/sidebar/: Sidebar.cpp  Sidebar.h  SidebarItem.cpp  SidebarItem.h
src/ui/components/widgets/: WelcomeWidget.cpp  WelcomeWidget.h
src/ui/factory/: PageFactory.cpp  PageFactory.h
src/ui/page/: DailyPage.cpp  DailyPage.h  Dashboard.cpp  Dashboard.h
src/ui/page/calendar/: CalendarPage.cpp  CalendarPage.h
src/ui/page/todo/: CategoryWidget.cpp  CategoryWidget.h  TaskItemWidget.cpp  TaskItemWidget.h  ToDoListWidget.cpp  ToDoListWidget.h  ToDoPage.cpp  ToDoPage.h  ToDoRightBar.cpp  ToDoRightBar.h  ToDoSmallWidget.cpp  ToDoSmallWidget.h
